src/test/deca/context/invalid/assign-withObject.context
assign-withObject.deca:21: